# dstributed_range_query

./: CMakeLists.txt  README.md
data/: DRQ_DATA_FILE.txt  DRQ_QUERY_FILE.txt  DRQ_RES_FILE.txt  range.txt
include/: drq_data_structure.cpp  drq_data_structure.h  drq_operation.cpp  drq_operation.h  utils.h
script/: generate_data.py  generate_query.py
test/: drq_test.cpp
